test/parse/module/bad-module-no-close.txt
;;; ERROR: 1
(module
(;; STDERR ;;;
out/test/parse/module/bad-module-no-close.txt:3:1: syntax error, unexpected EOF, expecting ( or )
;;; STDERR ;;)
